--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
  */
 
 apply plugin: 'java'
+sourceCompatibility = 1.7   // jdk
 
 repositories {
     jcenter()
@@ -16,7 +17,7 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
     testCompile 'junit:junit:4.12'
-	compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.6.0'
+	compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 	compile group: 'com.google.guava', name: 'guava', version: '19.0'
 }
